# CND-PlaneacionOperacion-SOLARLIB

./: .gitignore  .pypirc  Dockerfile.local  LICENCE  README.md  azure-pipelines.yml  coverage.xml  docker-compose.local.yml  pyproject.toml  pytest.ini  setup.py  test.sh  tox.ini
tests/: conftest.py  test_clearsky.py  test_inverter.py  test_irradiance.py  test_location.py  test_pvsystem.py  test_singlediode.py  test_solarposition.py  test_spa.py  test_spectrum.py  test_temperature.py  test_tools.py  test_tracking.py
tests/bifacial/: test_pvfactors.py
tests/pvfactors/: conftest.py  test_engine.py  test_run.py
xm_solarlib/: __init__.py  _deprecation.py  atmosphere.py  clearsky.py  constantes.py  iam.py  inverter.py  irradiance.py  location.py  pvsystem.py  singlediode.py  solarposition.py  spa.py  temperature.py  tools.py  tracking.py  version.py
xm_solarlib/bifacial/: __init__.py  pvfactors.py
xm_solarlib/data/: 703165TY.csv  723170TYA.CSV  BIRD_08_16_2012.csv  BIRD_08_16_2012_patm.csv  Burlington, United States SolarAnywhere Time Series 2021 Lat_44_465 Lon_-73_205 TMY3 format.csv  CRNS0101-05-2019-AZ_Tucson_11_W.txt  CRN_with_problems.txt  PVsyst_demo.csv  PVsyst_demo_model.csv  SRML-day-EUPO1801.txt  adr-library-cec-inverters-2019-03-05.csv  astm_g173_am15g.csv  bishop88_numerical_precision.csv  cams_mcclear_1min_verbose.csv  cams_mcclear_monthly.csv  cams_radiation_1min_verbose.csv  cams_radiation_monthly.csv  detect_clearsky_data.csv  inverter_fit_snl_meas.csv  inverter_fit_snl_sim.csv  ivtools_numdiff.csv  midc_20181014.txt  midc_raw_20181018.txt  (+20 more)
(+44 files in other folders)
