[tool.poetry]
name = "xm-solarlib"
version = "0.1.2"
description = ""
authors = ["Jhonatan Acelas Arevalo <jhonatanacelas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9, <3.13"
pandas = "2.0.3"
numpy = "1.25.2"
cython = "^3.0.4"
scipy = "1.11.2"
matplotlib = "3.7.2"
h5py = "3.9.0"
ephem = "^4.1.5"
numba = "^0.58.1"
importlib = "^1.0.4"
pytest-mock = "^3.12.0"
shapely = ">=1.6.4.post2,<2"
coverage = "^7.4.0"
greenlet = "^3.0.3"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
